# astra

./: LICENSE  README.md
ai-engine/: .env.example  package.json
ai-engine/src/config/: db.ts  env.ts  redis.ts
ai-engine/src/enrichment/: newsEnricher.ts  worldBankEnricher.ts
ai-engine/src/models/: AIDeepDive.model.ts  AIScore.model.ts  ChatHistory.model.ts  MarketSummary.model.ts
ai-engine/src/validators/: aiResponse.validator.ts
backend/: .env.example  package.json  tsconfig.json
backend/src/: app.ts  server.ts
backend/src/config/: constants.ts  db.ts  env.ts  redis.ts  sendgrid.ts  supabase.ts
backend/src/controllers/: asset.controller.ts  auth.controller.ts  investment.controller.ts  notification.controller.ts  user.controller.ts
backend/src/middleware/: authenticate.ts  authenticateAdmin.ts  authorize.ts  errorHandler.ts  notFound.ts  rateLimiter.ts  requestLogger.ts  suspiciousActivity.ts  uploadMiddleware.ts  validateRequest.ts
backend/src/models/: AdminUser.model.ts  AuditLog.model.ts  Investment.model.ts  Notification.model.ts  User.model.ts
backend/src/routes/: asset.routes.ts  (+4 more)
blockchain/programs/astra_pool/: Cargo.toml
blockchain/programs/astra_pool/src/: constants.rs  errors.rs  lib.rs
blockchain/programs/astra_pool/src/state/: pool.rs
blockchain/programs/astra_yield/: Cargo.toml
blockchain/programs/astra_yield/src/: constants.rs  errors.rs  lib.rs
blockchain/programs/astra_yield/src/state/: mod.rs  yield.rs
frontend/: .env.example  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
(+15 files in other folders)
