[package]
name = "astra_pool"
version = "0.1.0"
description = "Astra Pool Program - Investment pool and position management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "astra_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
