[package]
name = "astra_yield"
version = "0.1.0"
description = "Astra Yield Program - Yield tracking and claim mechanism"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "astra_yield"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
